<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS-Report Parser</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_test">Some test</string>
    <string name="button_show_table">Таблица</string>
    <string name="action_settings">Настройки</string>
    <string name="action_database_settings">Управление БД</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_display_table">My Table</string>
    <string name="title_activity_add_all">Добавить всё</string>
    <string name="title_activity_drop_db">Пересоздать БД</string>
    <string name="title_activity_delete_all">Удалить всё</string>
    
    <string name="title_activity_delete_sms">Delete by sms id</string>
    <string name="title_activity_delete_record_by_id">Delete by record id</string>
    
    <string name="title_activity_show_panes">Статус</string>
    <string name="title_activity_display_codes">Show symbols</string>
    <string name="notification_pref">Уведомление</string>
    <string name="notification_pref_sum">Уведомление при возникновении события</string>
    
    <string name="title_activity_play">Играть</string>
    <string name="title_activity_stop">Остановить</string>
    
    <string name="golden_gate_label">GoldenGate</string>
    <string name="otrabotalo_label">ОТРАБОТАЛО</string>
    <string name="nochyu_upalo_label">НОЧЬЮ_УПАЛО</string>
    <string name="abontoday_label">ABONTODAY</string>
    <string name="viruchka_label">ВЫРУЧКА</string>
    <string name="operativniy_label">ОПЕРАТИВНЫЙ</string>
    <string name="send_imsi_label">SEND_IMSI</string>
    <string name="ftp_upl_label">FTP_UPL</string>
    <string name="vchera_upalo_label">ВЧЕРА_УПАЛО</string>
    <string name="padalo_sem_dney_label">ПАДАЛО_7_ДНЕЙ</string>
    <string name="svobodno_label">СВОБОДНО</string>
    <string name="abon_dynamic_label">Динамика АБ</string>
    
    <string name="label_one">1</string>
    <string name="label_two">2</string>
    <string name="label_three">3</string>
    <string name="label_four">4</string>
    <string name="label_five">5</string>
    
    <string name="label_content_description_value_one">День 1</string>
    <string name="label_content_description_value_two">День 2</string>
    <string name="label_content_description_value_three">День 3</string>
    <string name="label_content_description_value_four">День 4</string>
    <string name="label_content_description_value_five">День 5</string>
    
    <string name="abon_dynamic_region">Рег</string>
    <string name="abon_dynamic_delivery_subs">Прит</string>
    <string name="abon_dynamic_churn">Отт</string>
    <string name="abon_dynamic_trend">Тренд B2C</string>
    
    <string name="action_about">История изменений</string>

</resources>
