<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abontodayLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="50dp"
    android:background="@drawable/card"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nochyuAbontodayLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/abontoday_label" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRowAbontodayDays"
            android:layout_width="fill_parent"
            android:gravity="center" >

            <TextView
                android:id="@+id/textViewAbontodayDayOne"
                android:gravity="center"
                android:text="@string/label_one" />

            <TextView
                android:id="@+id/textViewAbontodayDayTwo"
                android:gravity="center"
                android:text="@string/label_two" />

            <TextView
                android:id="@+id/textViewAbontodayDayThree"
                android:gravity="center"
                android:text="@string/label_three" />

            <TextView
                android:id="@+id/textViewAbontodayDayFour"
                android:gravity="center"
                android:text="@string/label_four" />

            <TextView
                android:id="@+id/textViewAbontodayDayFive"
                android:gravity="center"
                android:text="@string/label_five" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowAbontodayValues"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/imageViewAbontodayValueOne"
                android:contentDescription="@string/label_content_description_value_one"
                android:src="@drawable/success" />

            <ImageView
                android:id="@+id/imageViewAbontodayValueTwo"
                android:contentDescription="@string/label_content_description_value_two"
                android:src="@drawable/success" />

            <ImageView
                android:id="@+id/imageViewAbontodayValueThree"
                android:contentDescription="@string/label_content_description_value_three"
                android:src="@drawable/success" />

            <ImageView
                android:id="@+id/imageViewAbontodayValueFour"
                android:contentDescription="@string/label_content_description_value_four"
                android:src="@drawable/success" />

            <ImageView
                android:id="@+id/imageViewAbontodayValueFive"
                android:contentDescription="@string/label_content_description_value_five"
                android:src="@drawable/success" />
        </TableRow>
    </TableLayout>

</LinearLayout>